# fast-api-kit

./: Dockerfile  README.md  backend_pre_start.py  docker-compose.yml  prestart.sh  pyproject.toml  run.cmd
alembic/: env.py
alembic/versions/: 792c8ce7a3ce_test.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: deps.py  user.py
app/constants/: error_message.py
app/core/: config.py  containers.py
app/db/: database.py
app/models/: base_model.py  user.py
app/repositories/: base.py  user.py
app/schemas/: user.py
app/services/: user.py
app/utils/: string_utils.py
