[tool.poetry]
name = "fast-api-kit"
version = "0.1.0"
description = ""
authors = ["Loc Nguyen <V_NGUL509@kellyservices.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
aiohttp = "^3.8.5"
sqlalchemy = "^2.0.20"
pydantic-settings = "^2.0.3"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
